implemented the edit modal and logic along with the income page transactions. set up the main page to load income and expense data dynamically

--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "font-awesome": ">=4.1.0",
     "json3": "~3.3.1",
     "lodash": "~2.4.1",
+    "material-design-icons": "~2.0.0",
     "tc-angular-chartjs": "~1.0.12"
   },
   "devDependencies": {
