--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-sanitize": ">=1.2.*",
     "angular-ui-router": "~0.2.15",
     "bootstrap": "~3.1.1",
+    "cucumber": "~0.5.2",
     "es5-shim": "~3.0.1",
     "font-awesome": ">=4.1.0",
     "json3": "~3.3.1",
